vocab.css
/*

COLOR PALETTE

Light blue: #D9E5FF
Blue: #D9E5FF
Dark pink: #E2C8E5
Pink: #E2C8E5
Light pink: #F9DFE8
Pale orange: #FDECE4

*/

:root {
	--lightblue: #D9E5FF;
	--blue: #C1DAF8;
	--darkpink: #E2C8E5;
	--pink: #F3D3EA;
	--lightpink: #F9DFE8;
	--paleorange: #FDECE4;
	--grey: #A9A9A9;
}

body {
	background-color: var(--lightpink);
	margin: 0px;
	border: 0px;
	font-family: 'Roboto', sans-serif;
	align-items: center;
	min-width: 950px;
}

a {
	display:inline;
}

/* COLOURS ------------------------------------ */

.colourSwatch {
	position: fixed;
	bottom: 3vh;
	right: 5vh;
	float: right;
}

.colourBlock {
	border: var(--grey) 1px solid;
	width: 20px;
	height: 20px;
	display: inline-block;
}

.colourBlock:hover, .colourBlock:active {
	cursor: pointer;
	border: black 1px solid;
}

#lightblue {
	background-color: var(--lightblue);
}
#blue {
	background-color: var(--blue);
}
#darkpink {
	background-color: var(--darkpink);
}
#pink {
	background-color: var(--pink);
}
#lightpink {
	background-color: var(--lightpink);
}
#lightorange {
	background-color: var(--lightorange);
}

.romaji {
	margin-top: 10vh;
	font-weight: 100;
	font-size: 60px;
	font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace; 
}

.most_visited {
	padding: 0px;
	margin-top: 3vh;
}

.kanjiclass {
	position: relative;
	margin-top: -5vh;
}

.kanji {
	text-align: center;
	font-size: 60px;
	font-weight: 900;
}

.kanaclass {
	position: relative;
	padding-top: 1vh;
}

.hiragana {
	font-weight: 100;
	font-size: 20px;	
	margin-right: 10px;
}

.dot {
	align-items: center;
}

.katakana {
	padding-top: 2vh;
	font-weight: 100;
	font-size: 20px;
	position:relative;
	text-align: center;	
	margin-left: 10px;
}

.pos {
	font-weight: 100;
	font-size: 15px;
	position:relative;
	text-align: center;	
	font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace; 
	
}

.pronounciation_pos {
	color:#8c8c8c;
	position:relative;
	margin: 0 auto;
	padding-top: 1vh;
}

.definition {
	font-size: 30px;
	margin: 0;
	padding: 0;
	margin-top: 1vh;
	width: 90vw;
	margin-left: auto;
	margin-right: auto;
	font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace; 
}

ul {
	/*padding-left: 10vw;*/
	position: relative;
	margin: 0 auto;
	padding-top: 5vh;
}

li {
	border:0px;
	margin:0px;
	float: left;
	display: inline;
	margin: 1.25vw;
	-webkit-transition: box-shadow .2s; /* Safari */
    transition: box-shadow .2s;
    -webkit-transition-timing-function: ease-in-out;
    transition-timing-function: ease-in-out;
}

li:hover {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
	background-color: white;
}

a:link {
	color:black;
	text-decoration: none;
}

a:visited {
	color:black;
	text-decoration: none;
}

a:hover {
	color:black;
	text-decoration: none;
}

a:active {
	color:black;
	text-decoration: none;
}

.link {
	position: relative;
	width: 180px;
	overflow: hidden;
    overflow: ellipsis;
    white-space: nowrap;
  	border: 0.10vw solid var(--grey);
  	padding: 10px;
  	height: 30px;
  	border-radius: 30px;
  	
}

.favicon {
	width: 20px;
	height: 20px;
	margin-left: 5px;
	margin-top: 5px;
	margin-right: 5px;
}

.link_text {
	padding-left: 5px;
	padding-top: 5px;
	position: absolute;
	font-size: 15px;
	display: inline-flex;
    
}

